--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h3>Entre em contato</h3>
             <ul>
                 <a href="https://pt-br.facebook.com/fabiana.nemenogueiraramos/" target="_blank" class="social-icon">
-            <img src="Icones/Face.png" alt="Facebook" />
+            <img src="Face.png" alt="Facebook" />
         </a>
         <a href="https://www.instagram.com/fabiana.neme.psicologa/" target="_blank" class="social-icon">
             <img src="Insta.png" alt="Instagram" />
