--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 Oferecemos duas modalidades de atendimento:
             </p>
             <button class="sessoes-button">
-                <a href="https://www.doctoralia.com.br/fabiana-neme-nogueira-ramos/psicologo/presidente-prudente#profile-info" target="_blank"><img src="img/LogoDoc.png" alt="Saiba Mais" /></a>
+                <a href="https://www.doctoralia.com.br/fabiana-neme-nogueira-ramos/psicologo/presidente-prudente#profile-info" target="_blank"><img src="LogoDoc.png" alt="Saiba Mais" /></a>
             </button>
         </div>
         <div class="sessoes-icons">
